hphp/test/zend/good/tests/classes/constants_error_006.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/constants_error_006.php on line 8
